--- a/dataviz/angular.json
+++ b/dataviz/angular.json
@@ -27,7 +27,8 @@
               "./node_modules/leaflet/dist/leaflet.css"
             ],
             "scripts": [
-              "./node_modules/leaflet/dist/leaflet.js"
+              "./node_modules/leaflet/dist/leaflet.js",
+              "./node_modules/leaflet.heat/dist/leaflet-heat.js"
             ]
           },
           "configurations": {
