--- a/dataviz/package.json
+++ b/dataviz/package.json
@@ -11,15 +11,20 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~7.2.0",
+    "@angular/animations": "^7.2.9",
+    "@angular/cdk": "^7.3.5",
     "@angular/common": "~7.2.0",
     "@angular/compiler": "~7.2.0",
     "@angular/core": "~7.2.0",
+    "@angular/flex-layout": "^7.0.0-beta.23",
     "@angular/forms": "~7.2.0",
+    "@angular/material": "^7.3.5",
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@turf/turf": "^5.1.6",
     "core-js": "^2.5.4",
+    "hammerjs": "^2.0.8",
     "leaflet": "^1.4.0",
     "leaflet.heat": "^0.2.0",
     "rxjs": "~6.3.3",
