--- a/dataviz/package.json
+++ b/dataviz/package.json
@@ -26,6 +26,7 @@
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
     "leaflet": "^1.4.0",
+    "leaflet-freehandshapes": "^0.3.4",
     "leaflet.heat": "^0.2.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
