--- a/dataviz/package.json
+++ b/dataviz/package.json
@@ -28,6 +28,7 @@
     "leaflet": "^1.4.0",
     "leaflet-freehandshapes": "^0.3.4",
     "leaflet.heat": "^0.2.0",
+    "leaflet.polyline.snakeanim": "^0.2.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
