--- a/dataviz/package.json
+++ b/dataviz/package.json
@@ -23,7 +23,11 @@
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
     "@turf/turf": "^5.1.6",
+    "color-interpolate": "^1.0.4",
+    "colormap": "^2.3.0",
     "core-js": "^2.5.4",
+    "d3": "^5.9.2",
+    "d3-interpolate": "^1.3.2",
     "hammerjs": "^2.0.8",
     "leaflet": "^1.4.0",
     "leaflet-freehandshapes": "^0.3.4",
@@ -38,9 +42,10 @@
     "@angular/cli": "~7.2.3",
     "@angular/compiler-cli": "~7.2.0",
     "@angular/language-service": "~7.2.0",
-    "@types/node": "~8.9.4",
+    "@types/d3": "^5.7.1",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
