--- a/dataviz/package.json
+++ b/dataviz/package.json
@@ -30,6 +30,7 @@
     "d3-interpolate": "^1.3.2",
     "hammerjs": "^2.0.8",
     "leaflet": "^1.4.0",
+    "leaflet-dvf": "^0.3.1",
     "leaflet-freehandshapes": "^0.3.4",
     "leaflet.heat": "^0.2.0",
     "leaflet.polyline.snakeanim": "^0.2.0",
